# pytest-beartype-tests

./: .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  conftest.py  pyproject.toml
.github/workflows/: ci.yml
src/pytest_beartype_tests/: __init__.py  plugin.py
tests/: __init__.py  test_plugin.py
